--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "socket.io": "^4.1.3",
     "typescript": "^4.3.5"
   },
+  "jest": {
+    "preset": "jest-expo"
+  },
   "devDependencies": {
     "nodemon": "^2.0.12"
   }
